Condense collect.tolist()