@@ -16,7 +16,6 @@ import bio.terra.tanagra.underlay.serialization.SZIndexer;
 import bio.terra.tanagra.underlay.serialization.SZUnderlay;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import picocli.CommandLine;
 
 public abstract class Underlay extends BaseCommand {
@@ -48,7 +47,7 @@ public abstract class Underlay extends BaseCommand {
                   }
                   return jobSet;
                 })
-            .collect(Collectors.toList());
+            .toList();
     JobRunner entityJobRunner =
         jobExecutorAndDryRun.jobExecutor.getRunner(
             entityJobSets, jobExecutorAndDryRun.dryRun, getRunType());
@@ -65,7 +64,7 @@ public abstract class Underlay extends BaseCommand {
                   }
                   return jobSet;
                 })
-            .collect(Collectors.toList());
+            .toList();
     JobRunner entityGroupJobRunner =
         jobExecutorAndDryRun.jobExecutor.getRunner(
             entityGroupJobSets, jobExecutorAndDryRun.dryRun, getRunType());
