@@ -4,7 +4,6 @@ import bio.terra.tanagra.indexing.job.IndexingJob;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Container for a set of jobs and the sequence they must be run in. The stages must be run
@@ -37,7 +36,7 @@ public class SequencedJobSet {
       List<IndexingJob> filteredStage =
           stage.stream()
               .filter(indexingJob -> jobClassNames.contains(indexingJob.getClass().getName()))
-              .collect(Collectors.toList());
+              .toList();
       if (!filteredStage.isEmpty()) {
         filteredStages.add(filteredStage);
       }
