@@ -2,7 +2,6 @@ package bio.terra.tanagra.testing;
 
 import com.google.common.collect.Multimap;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.beam.sdk.values.KV;
 
 public final class KVUtils {
@@ -12,6 +11,6 @@ public final class KVUtils {
   public static <A, B> List<KV<A, B>> convertToKvs(Multimap<A, B> multimap) {
     return multimap.entries().stream()
         .map(entry -> KV.of(entry.getKey(), entry.getValue()))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
