@@ -48,7 +48,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -118,11 +117,11 @@ public class ExportApiController implements ExportApi {
     List<Cohort> cohorts =
         body.getCohorts().stream()
             .map(cohortId -> cohortService.getCohort(body.getStudy(), cohortId))
-            .collect(Collectors.toList());
+            .toList();
     List<FeatureSet> featureSets =
         body.getFeatureSets().stream()
             .map(featureSetId -> featureSetService.getFeatureSet(body.getStudy(), featureSetId))
-            .collect(Collectors.toList());
+            .toList();
     List<EntityOutputPreview> entityOutputPreviews =
         filterBuilderService.buildOutputPreviewsForExport(
             cohorts, featureSets, body.isIncludeAllAttributes());
@@ -184,11 +183,11 @@ public class ExportApiController implements ExportApi {
     List<Cohort> cohorts =
         body.getCohorts().stream()
             .map(cohortId -> cohortService.getCohort(body.getStudy(), cohortId))
-            .collect(Collectors.toList());
+            .toList();
     List<FeatureSet> featureSets =
         body.getFeatureSets().stream()
             .map(featureSetId -> featureSetService.getFeatureSet(body.getStudy(), featureSetId))
-            .collect(Collectors.toList());
+            .toList();
     List<EntityOutputPreview> entityOutputPreviews =
         filterBuilderService.buildOutputPreviewsForExport(
             cohorts, featureSets, body.isIncludeAllAttributes());
@@ -236,7 +235,7 @@ public class ExportApiController implements ExportApi {
                   .includedAttributes(
                       entityOutputPreview.getEntityOutput().getAttributes().stream()
                           .map(Attribute::getName)
-                          .collect(Collectors.toList()))
+                          .toList())
                   .criteria(
                       entityOutputPreview.getAttributedCriteria().stream()
                           .map(
@@ -244,7 +243,7 @@ public class ExportApiController implements ExportApi {
                                   new ApiEntityOutputPreviewCriteria()
                                       .featureSetId(featureSetAndCriteria.getLeft().getId())
                                       .criteriaId(featureSetAndCriteria.getRight().getId()))
-                          .collect(Collectors.toList()))
+                          .toList())
                   .indexSql(SqlFormatter.format(indexSqlForEntityOutputs.get(entityOutputPreview)))
                   .sourceSql(
                       SqlFormatter.format(sourceSqlForEntityOutputs.get(entityOutputPreview)));
@@ -282,11 +281,11 @@ public class ExportApiController implements ExportApi {
     List<Cohort> cohorts =
         body.getCohorts().stream()
             .map(cohortId -> cohortService.getCohort(body.getStudy(), cohortId))
-            .collect(Collectors.toList());
+            .toList();
     List<FeatureSet> featureSets =
         featureSetIds.stream()
             .map(featureSetId -> featureSetService.getFeatureSet(body.getStudy(), featureSetId))
-            .collect(Collectors.toList());
+            .toList();
 
     ExportRequest exportRequest =
         new ExportRequest(
@@ -321,9 +320,7 @@ public class ExportApiController implements ExportApi {
                 : ApiExportResult.StatusEnum.FAILED)
         .outputs(exportResult.getOutputs())
         .links(
-            exportResult.getFileResults().stream()
-                .map(ExportApiController::toApiObject)
-                .collect(Collectors.toList()))
+            exportResult.getFileResults().stream().map(ExportApiController::toApiObject).toList())
         .redirectAwayUrl(exportResult.getRedirectAwayUrl())
         .error(exportResult.getError() == null ? null : exportResult.getError().getMessage());
   }
