@@ -109,9 +109,7 @@ public class FeatureSetsApiController implements FeatureSetsApi {
     List<Criteria> criteria =
         body.getCriteria() == null
             ? null
-            : body.getCriteria().stream()
-                .map(FromApiUtils::fromApiObject)
-                .collect(Collectors.toList());
+            : body.getCriteria().stream().map(FromApiUtils::fromApiObject).toList();
 
     Map<String, List<String>> outputAttributesPerEntity =
         body.getEntityOutputs() == null
@@ -174,9 +172,7 @@ public class FeatureSetsApiController implements FeatureSetsApi {
         .criteria(
             featureSet.getCriteria() == null
                 ? null
-                : featureSet.getCriteria().stream()
-                    .map(ToApiUtils::toApiObject)
-                    .collect(Collectors.toList()))
+                : featureSet.getCriteria().stream().map(ToApiUtils::toApiObject).toList())
         .entityOutputs(
             featureSet.getExcludeOutputAttributesPerEntity() == null
                 ? null
@@ -186,6 +182,6 @@ public class FeatureSetsApiController implements FeatureSetsApi {
                             new ApiEntityOutput()
                                 .entity(entry.getKey())
                                 .excludeAttributes(entry.getValue()))
-                    .collect(Collectors.toList()));
+                    .toList());
   }
 }
