@@ -264,9 +264,7 @@ public class ActivityLogDao {
         });
 
     // Preserve the order returned by the original query.
-    return activityLogs.stream()
-        .map(al -> activityLogsMap.get(al.getId()).build())
-        .collect(Collectors.toList());
+    return activityLogs.stream().map(al -> activityLogsMap.get(al.getId()).build()).toList();
   }
 
   @WriteTransaction
