@@ -214,9 +214,7 @@ public class AnnotationDao {
         });
 
     // Preserve the order returned by the original query.
-    return annotationKeys.stream()
-        .map(a -> annotationKeysMap.get(a.getId()).build())
-        .collect(Collectors.toList());
+    return annotationKeys.stream().map(a -> annotationKeysMap.get(a.getId()).build()).toList();
   }
 
   @WriteTransaction
