@@ -257,8 +257,6 @@ public class ReviewDao {
         });
 
     // Preserve the order returned by the original query.
-    return reviews.stream()
-        .map(r -> reviewsMap.get(r.getId()).build())
-        .collect(Collectors.toList());
+    return reviews.stream().map(r -> reviewsMap.get(r.getId()).build()).toList();
   }
 }
