@@ -347,9 +347,7 @@ public class StudyDao {
         });
 
     // Preserve the order returned by the original query.
-    return studies.stream()
-        .map(s -> studiesMap.get(s.getId()).build())
-        .collect(Collectors.toList());
+    return studies.stream().map(s -> studiesMap.get(s.getId()).build()).toList();
   }
 
   private void updatePropertiesHelper(String studyId, Map<String, String> properties) {
