@@ -60,7 +60,6 @@ public class ReviewService {
 
   private final CohortService cohortService;
   private final UnderlayService underlayService;
-
   private final AnnotationService annotationService;
   private final ReviewDao reviewDao;
   private final ActivityLogService activityLogService;
@@ -331,7 +330,7 @@ public class ReviewService {
           List<AnnotationValue> associatedAnnotationValues =
               annotationValues.stream()
                   .filter(av -> av.getInstanceId().equals(idAttributeValueStr))
-                  .collect(Collectors.toList());
+                  .toList();
 
           if (!reviewQueryRequest.hasAnnotationFilter()
               || reviewQueryRequest.getAnnotationFilter().isMatch(associatedAnnotationValues)) {
@@ -393,7 +392,7 @@ public class ReviewService {
             .map(
                 attrName ->
                     new AttributeField(underlay, entity, entity.getAttribute(attrName), true))
-            .collect(Collectors.toList());
+            .toList();
 
     EntityFilter entityFilter =
         new AttributeFilter(
