@@ -18,7 +18,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -154,9 +153,7 @@ public class DataExportService {
     EntityFilter primaryEntityFilter =
         filterBuilderService.buildFilterForCohortRevisions(
             request.getUnderlay().getName(),
-            request.getCohorts().stream()
-                .map(Cohort::getMostRecentRevision)
-                .collect(Collectors.toList()));
+            request.getCohorts().stream().map(Cohort::getMostRecentRevision).toList());
 
     return new DataExportHelper(
         featureConfiguration.getMaxChildThreads(),
