@@ -48,7 +48,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -227,7 +226,7 @@ public class FilterBuilderServiceTest {
             underlay.getPrimaryEntity(),
             underlay.getPrimaryEntity().getAttributes().stream()
                 .filter(attribute -> !attribute.isId())
-                .collect(Collectors.toList()));
+                .toList());
     Optional<EntityOutputPreview> entityOutputAndAttributedCriteria1 =
         entityOutputs.stream()
             .filter(
@@ -304,7 +303,7 @@ public class FilterBuilderServiceTest {
             cmssynpuf.getPrimaryEntity(),
             cmssynpuf.getPrimaryEntity().getAttributes().stream()
                 .filter(attribute -> !attribute.isSuppressedForExport())
-                .collect(Collectors.toList()));
+                .toList());
     assertEquals(expectedOutput, entityOutputsForDataFeatureSetPage.get(0).getEntityOutput());
 
     // One suppressed attribute, includeAllAttributes=false for export page.
@@ -369,7 +368,7 @@ public class FilterBuilderServiceTest {
             procCondGendCohortFilter(),
             underlay.getPrimaryEntity().getAttributes().stream()
                 .filter(attribute -> !attribute.isId())
-                .collect(Collectors.toList()));
+                .toList());
     expectedOutput2 =
         EntityOutput.filtered(
             underlay.getEntity("conditionOccurrence"),
