@@ -11,7 +11,6 @@ import bio.terra.tanagra.underlay.uiplugin.CriteriaSelector;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class SurveyFilterBuilder extends EntityGroupFilterBuilderBase {
   public SurveyFilterBuilder(CriteriaSelector criteriaSelector) {
@@ -36,7 +35,7 @@ public class SurveyFilterBuilder extends EntityGroupFilterBuilderBase {
   protected List<String> entityGroupIds() {
     return deserializeConfig().getEntityGroupsList().stream()
         .map(EntityGroupConfig::getId)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
