@@ -28,7 +28,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 
 public class TextSearchFilterBuilder extends FilterBuilder {
@@ -62,7 +61,7 @@ public class TextSearchFilterBuilder extends FilterBuilder {
     List<Literal> criteriaIds =
         textSearchSelectionData.getCategoriesList().stream()
             .map(category -> Literal.forInt64(category.getValue().getInt64Value()))
-            .collect(Collectors.toList());
+            .toList();
     String textQuery = textSearchSelectionData.getQuery();
 
     // Build the sub-filter on the criteria entity.
@@ -170,7 +169,7 @@ public class TextSearchFilterBuilder extends FilterBuilder {
       List<Literal> criteriaIds =
           textSearchSelectionData.getCategoriesList().stream()
               .map(category -> Literal.forInt64(category.getValue().getInt64Value()))
-              .collect(Collectors.toList());
+              .toList();
       String textQuery = textSearchSelectionData.getQuery();
 
       // Build the criteria filters on each of the occurrence entities.
