@@ -16,7 +16,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.tuple.Pair;
 
 public final class GroupByCountSchemaUtils {
@@ -82,7 +81,7 @@ public final class GroupByCountSchemaUtils {
                       .getValuesList()
                       .stream()
                       .map(occurrenceEntity::getAttribute)
-                      .collect(Collectors.toList())));
+                      .toList()));
     }
     return groupByAttributesPerOccurrenceEntity;
   }
