@@ -6,7 +6,6 @@ import bio.terra.tanagra.underlay.NameHelper;
 import bio.terra.tanagra.underlay.serialization.SZBigQuery;
 import com.google.common.collect.ImmutableList;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public final class ITInstanceLevelDisplayHints extends IndexTable {
   public static final String TABLE_NAME = "ILDH";
@@ -46,8 +45,7 @@ public final class ITInstanceLevelDisplayHints extends IndexTable {
   @Override
   public ImmutableList<ColumnSchema> getColumnSchemas() {
     // Columns are static and don't depend on the entity.
-    return ImmutableList.copyOf(
-        Arrays.stream(Column.values()).map(Column::getSchema).collect(Collectors.toList()));
+    return ImmutableList.copyOf(Arrays.stream(Column.values()).map(Column::getSchema).toList());
   }
 
   public enum Column {
